testcases/compiler2015/Phase2/CompileError/func1-5100379071-puyouer.c
/**
 return type must be defined
 */

struct A {
    int x, y, z;
};

struct B f() {
    int a;
    a = 1;
}

int main() {
    return 0;
}
